--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  
   <title>Document</title>
 </head>
 <body>
-  <button>Get Items</button>
   <div id="items"></div>
+  <script
+  src="http://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+  <script>
+    $(document).ready(() => {
+      fetch('/products', {
+        method: 'get',
+        'Content-Type': 'application/json'
+      }).then(res => {
+        return res.json();
+      }).then(res => {
+        console.log(res);
+      })
+    })
+  </script>
 </body>
 </html>
