--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,59 @@
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  
+  <style>
+    .prod-container {
+      width: 150px;
+      float: left;
+      margin-left: 5px;
+    }
+    img {
+      width: 150px;
+      height: 150px;
+    }
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      color: black;
+      text-decoration: none !important;
+    }
+  </style>
   <title>Document</title>
 </head>
+
 <body>
   <div id="items"></div>
-  <script
-  src="http://code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous"></script>
+  <script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+    crossorigin="anonymous"></script>
   <script>
+    const template = ({
+      listingUrl,
+      prodName,
+      price,
+      weight,
+      dimensions,
+      rank,
+      imgLink}) => {
+        return (`
+          <div class="prod-container">
+            <a href="${listingUrl}">
+              <img src="${imgLink}"></img>
+              <ul class="details">
+                <li>${prodName}</li>
+                <li>$${price}</li>
+                <li>${weight}</li>
+                <li>${dimensions}</li>
+                <li>${rank}</li>
+              </ul>
+            </a>
+          </div>
+          `
+        );
+    }
     $(document).ready(() => {
       fetch('/products', {
         method: 'get',
@@ -20,9 +61,12 @@
       }).then(res => {
         return res.json();
       }).then(res => {
-        console.log(res);
+        res.forEach(elem => {
+          $('#items').append(template(elem))
+        })
       })
     })
   </script>
 </body>
+
 </html>
